--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -6,7 +6,7 @@ RUN mkdir -p /run/nginx && apk add nginx
 COPY localhost.crt /etc/ssl/certs/
 COPY localhost.key /etc/ssl/private/
 COPY default /etc/nginx/conf.d/default.conf
-EXPOSE 80 443
+EXPOSE 22 80 443
 
 ENTRYPOINT ["nginx"]
 CMD ["-g", "daemon off;"]
