--- a/srcs/nginx/nginx.yaml
+++ b/srcs/nginx/nginx.yaml
@@ -3,11 +3,37 @@ kind: Service
 metadata:
   name: nginx
   labels:
-    run: nginx
+    app: nginx
 spec:
-  ports:
-  - port: 80
-    targetPort: 80
-    protocol: TCP
+  type: LoadBalancer
   selector:
-    run: nginx
+    app: nginx
+  ports:
+  - name: http
+    port: 80
+    targetPort: 80
+  - name: https
+    port: 443
+    targetPort: 443
+  - name: ssh
+    port: 22
+    targetPort: 22
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx
+spec:
+  selector:
+    matchLabels:
+      run: nginx
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        run: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: mynginx
+        imagePullPolicy: Never
