--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine
 
 RUN apk -U upgrade --no-cache
-RUN mkdir -p /var/www/html/ && echo "Yo" > /var/www/html/index.html
+RUN mkdir -p /var/www/html/ && echo "Bienvenue sur notre ft_services !" > /var/www/html/index.html
 RUN mkdir -p /run/nginx && apk add nginx
 COPY localhost.crt /etc/ssl/certs/
 COPY localhost.key /etc/ssl/private/
