--- a/srcs/nginx/nginx.yaml
+++ b/srcs/nginx/nginx.yaml
@@ -26,12 +26,12 @@ metadata:
 spec:
   selector:
     matchLabels:
-      run: nginx
+      app: nginx
   replicas: 1
   template:
     metadata:
       labels:
-        run: nginx
+        app: nginx
     spec:
       containers:
       - name: nginx
