influxdb connection ok

--- a/srcs/influxdb/telegraf.conf
+++ b/srcs/influxdb/telegraf.conf
@@ -7,8 +7,10 @@
   flush_interval = "10s"
   flush_jitter = "0s"
   precision = ""
-  hostname = "127.0.0.1"
+  hostname = "influxdb"
   omit_hostname = false
+[[inputs.http_response]]
+  #urls = ["http://172.17.0.4:8086"]
 [[outputs.influxdb]]
   urls = ["http://127.0.0.1:8086"]
   username = "admin"
