--- a/srcs/grafana/telegraf.conf
+++ b/srcs/grafana/telegraf.conf
@@ -7,10 +7,10 @@
   flush_interval = "10s"
   flush_jitter = "0s"
   precision = ""
-  hostname = "influxdb"
+  hostname = "grafana"
   omit_hostname = false
 [[outputs.influxdb]]
-  urls = ["http://127.0.0.1:8086"]
+  urls = ["http://172.17.0.4:8086"]
   username = "admin"
   password = "admin"
 [[inputs.disk]]
