--- a/srcs/mysql/telegraf.conf
+++ b/srcs/mysql/telegraf.conf
@@ -7,10 +7,10 @@ collection_jitter = "0s"
 flush_interval = "10s"
 flush_jitter = "0s"
 precision = ""
-hostname = "influxdb"
+hostname = "mysql"
 omit_hostname = false
 [[outputs.influxdb]]
-urls = ["http://127.0.0.1:8086"]
+urls = ["http://172.17.0.4:8086"]
 [[inputs.disk]]
 ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs"]
 [[inputs.diskio]]
