telegraf all service / add check minikube version / fix pma error

--- a/srcs/ftps/Dockerfile
+++ b/srcs/ftps/Dockerfile
@@ -2,9 +2,15 @@ FROM alpine
 
 EXPOSE 21 1024
 RUN apk -U upgrade --no-cache \
- && apk add openrc --no-cache && mkdir -p /run/openrc/ && touch /run/openrc/softlevel \
- && apk add vsftpd --no-cache \
- && apk add openssl --no-cache
+&& apk add openrc --no-cache && mkdir -p /run/openrc/ && touch /run/openrc/softlevel \
+&& apk add vsftpd --no-cache \
+&& apk add openssl gcompat libc6-compat
+
+RUN wget https://dl.influxdata.com/telegraf/releases/telegraf-1.14.5_linux_amd64.tar.gz \
+&& tar xf telegraf-1.14.5_linux_amd64.tar.gz && rm telegraf-1.14.5_linux_amd64.tar.gz \
+&& cp -R /telegraf/etc/telegraf /etc
+COPY telegraf.conf /etc/telegraf/
+
 RUN echo -e "admin\nadmin" | adduser admin
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:1024 \
 -subj "/C=FT/ST=SERVICE/L=C/O=LA/CN=www.MORT.com" \
