--- a/srcs/influxdb/influxdb.yaml
+++ b/srcs/influxdb/influxdb.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: influxdb
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: influxdb
   ports:
@@ -31,6 +31,13 @@ spec:
       - name: influxdb
         image: myinfluxdb
         imagePullPolicy: Never
+        livenessProbe:
+          exec:
+            command:
+            - sh
+            - /livenesscheck.sh
+          initialDelaySeconds: 15
+          periodSeconds: 5
         volumeMounts:
           - mountPath: "/var/lib/influxdb"
             name: influxdb
