--- a/srcs/phpmyadmin/phpmyadmin.yaml
+++ b/srcs/phpmyadmin/phpmyadmin.yaml
@@ -32,3 +32,10 @@ spec:
       - name: phpmyadmin
         image: myphpmyadmin
         imagePullPolicy: Never
+        livenessProbe:
+          exec:
+            command:
+            - sh
+            - /livenesscheck.sh
+          initialDelaySeconds: 15
+          periodSeconds: 5
